# pyspark-template

./: .gitignore  .python-version  Makefile  README.md  USAGE.md  context7.json  pyenv.sh  pyproject.toml
data/: clinical_trials.csv  drugs.csv  pubmed.csv  pubmed.json
data/output/: result.json
docs/codedocs/: architecture.md  index.md  json-output.md  spark-session.md  title-matching.md
docs/codedocs/api-reference/: jobs-drugs-gen.md  readers-csv.md  transform-common.md  utils-spark.md  writers-json.md
docs/codedocs/guides/: customize-spark.md  notebook-workflow.md  run-the-job.md
notebooks/: adhoc.ipynb  journals_single.json  sql.ipynb  test.ipynb
pyspark_template/: __main__.py
pyspark_template/jobs/: drugs_gen.py
pyspark_template/readers/: csv.py
pyspark_template/transform/: common.py
pyspark_template/utils/: spark.py
pyspark_template/writers/: json.py
tests/: conftest.py
tests/jobs/: test_drugs_gen.py
tests/transform/: test_common.py
